<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/userName"
        android:layout_width="233dp"
        android:layout_height="28dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="Name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="233dp"
        android:layout_height="28dp"
        android:text="Email"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.219" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangeName"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:text="@string/ChangeName"
        android:background="@drawable/btn_design"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.741" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangeEmail"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/btn_design"
        android:text="@string/ChangeEmail"
        app:layout_constraintBottom_toTopOf="@+id/btnChangePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/btn_design"
        android:text="@string/ChangePassword"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteAcc"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/btn_delete"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/DeleteAcc"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignOut"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:text="@string/SignOut"
        android:background="@drawable/btn_sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.703" />
</androidx.constraintlayout.widget.ConstraintLayout>