<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="#000080"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:textColor="#87cefa"
        android:text="Result"
        android:textSize="40dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRecognition"
        android:text="@string/text_Recognition"
        android:textColor="#87cefa"
        android:textSize="20sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_recognition"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_margin="15dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTTS"
        android:text="@string/text_to_speech"
        android:textColor="#2F4F4F"
        android:textSize="20sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_tts"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogle"
        android:text="@string/text_Google"
        android:textColor="#4285F4"
        android:textSize="20sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_google"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_margin="15dp"/>

    <ImageButton
        android:id="@+id/btn_home"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@mipmap/ic_home_btn"
        android:background="@drawable/btn_home" />

</LinearLayout>